add some field on thread
